--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   syncfusion_flutter_datagrid: ^22.1.60
+  dotted_border: ^2.1.0
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
